--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </div>
 
       <section class="techniques">
-        <h3 class="section__title">Техники обучения</h3>
-        <p class="section__subtitle">Пять практик от Барбары Оакли</p>
+        <h3 class="title">Техники обучения</h3>
+        <p class="subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="изображение [Два вида внимания]">
@@ -68,8 +68,8 @@
       </section>
 
       <section class="video">
-        <h3 class="section__title">Видео нa TED</h3>
-        <p class="section__subtitle">Для тех, кто любит прокрастинировать</p>
+        <h3 class="title">Видео нa TED</h3>
+        <p class="subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="iframes">
           <iframe class="iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
           <iframe class="iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
@@ -93,8 +93,8 @@
       </section>
 
       <section class="digits">
-        <h3 class="section__title">Цифры и факты</h3>
-        <p class="section__subtitle">Про учёбу и мозг</p>
+        <h3 class="title">Цифры и факты</h3>
+        <p class="subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
             <h4 class="table__heading">86 миллиардов</h4>
@@ -149,8 +149,8 @@
       </section>
 
       <section class="kaufman">
-        <h3 class="section__title section__title_theme_dark">Принципы обучения</h3>
-        <p class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h3 class="title title__kaufman_theme_dark">Принципы обучения</h3>
+        <p class="subtitle subtitle__kaufman_theme_dark">от Джоша Кауфмана</p>
         <ul class="table">
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">1</h4>
@@ -197,8 +197,8 @@
       </section>
 
       <section class="resourses">
-        <h3 class="section__title">Полезные ресурсы</h3>
-        <p class="section__subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <h3 class="title">Полезные ресурсы</h3>
+        <p class="subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <nav class="logo-zone">
           <a href="#" class="links"><img class="resourses__links" src="images/logo/resources-arzamas.svg" alt="логотип Арзамас"></a>
           <a href="#" class="links"><img class="resourses__links" src="images/logo/resources-n1.svg" alt="логотип N+1"></a>
@@ -219,7 +219,7 @@
 
         <div class="footer__column">
           <p class="footer__column_heading">О Практикуме</p>
-          <nav class="footer_column_links">
+          <nav class="footer__column_links">
             <a href="#" class="links">Главная</a>
             <a href="#" class="links">Концепция</a>
             <a href="#" class="links">Наставники</a>
@@ -227,11 +227,11 @@
         </div>
 
         <div class="footer__column">
-          <p class="footer_column_heading">Соцсети</p>
-          <div  class="footer_column_links">
-            <a href="#" class="links"><img class="social_icon" src="images/youtube-icon.svg" alt="иконка Youtube">Youtube</a>
-            <a href="#" class="links"><img class="social_icon" src="images/vk_color_white.svg" alt="иконка Вконтакте">Вконтакте</a>
-            <a href="#" class="links"><img class="social_icon" src="images/tiktok-icon.svg" alt="иконка TikTok">TikTok</a>
+          <p class="footer__column_heading">Соцсети</p>
+          <div  class="footer__column_links">
+            <a href="#" class="links"><img class="footer__social_icon" src="images/youtube-icon.svg" alt="иконка Youtube">Youtube</a>
+            <a href="#" class="links"><img class="footer__social_icon" src="images/vk_color_white.svg" alt="иконка Вконтакте">Вконтакте</a>
+            <a href="#" class="links"><img class="footer__social_icon" src="images/tiktok-icon.svg" alt="иконка TikTok">TikTok</a>
           </div>
         </div>
         
