--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <section class="khan">
         <div class="container">
           <p class="author">Салман Хан</p>
-          <h2 class="title">Весь мир — школа</h2>
+          <h2 class="khan__title">Весь мир — школа</h2>
           <p class="quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
           <p class="quote-author">Джордж Лукас</p>
           <p class="quote-author-subline">Кинорежиссер, продюсер</p>
@@ -149,8 +149,8 @@
       </section>
 
       <section class="kaufman">
-        <h3 class="title title__kaufman_theme_dark">Принципы обучения</h3>
-        <p class="subtitle subtitle__kaufman_theme_dark">от Джоша Кауфмана</p>
+        <h3 class="title kaufman__title">Принципы обучения</h3>
+        <p class="subtitle kaufman__subtitle">от Джоша Кауфмана</p>
         <ul class="table">
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">1</h4>
@@ -200,26 +200,26 @@
         <h3 class="title">Полезные ресурсы</h3>
         <p class="subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <nav class="logo-zone">
-          <a href="#" class="links"><img class="resourses__links" src="images/logo/resources-arzamas.svg" alt="логотип Арзамас"></a>
-          <a href="#" class="links"><img class="resourses__links" src="images/logo/resources-n1.svg" alt="логотип N+1"></a>
-          <a href="#" class="links"><img class="resourses__links" src="images/logo/resources-strelka.svg" alt="логотип Стрелка"></a>
-          <a href="#" class="links"><img class="resourses__links" src="images/logo/resources-polka.svg" alt="логотип Полка"></a>
+          <a href="#" class="links"><img class="links__resourses" src="images/logo/resources-arzamas.svg" alt="логотип Арзамас"></a>
+          <a href="#" class="links"><img class="links__resourses" src="images/logo/resources-n1.svg" alt="логотип N+1"></a>
+          <a href="#" class="links"><img class="links__resourses" src="images/logo/resources-strelka.svg" alt="логотип Стрелка"></a>
+          <a href="#" class="links"><img class="links__resourses" src="images/logo/resources-polka.svg" alt="логотип Полка"></a>
         </nav>
       </section>
 
     </main>
 
     <footer class="footer">
-      <div class="footer__columns">
+      <div class="columns">
 
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author">&#169; Satiukov Aleksei</p>
+          <p class="author">&#169; Satiukov Aleksei</p>
         </div>
 
         <div class="footer__column">
-          <p class="footer__column_heading">О Практикуме</p>
-          <nav class="footer__column_links">
+          <p class="column-heading">О Практикуме</p>
+          <nav class="column-links">
             <a href="#" class="links">Главная</a>
             <a href="#" class="links">Концепция</a>
             <a href="#" class="links">Наставники</a>
@@ -227,11 +227,11 @@
         </div>
 
         <div class="footer__column">
-          <p class="footer__column_heading">Соцсети</p>
-          <div  class="footer__column_links">
-            <a href="#" class="links"><img class="footer__social_icon" src="images/youtube-icon.svg" alt="иконка Youtube">Youtube</a>
-            <a href="#" class="links"><img class="footer__social_icon" src="images/vk_color_white.svg" alt="иконка Вконтакте">Вконтакте</a>
-            <a href="#" class="links"><img class="footer__social_icon" src="images/tiktok-icon.svg" alt="иконка TikTok">TikTok</a>
+          <p class="column-heading">Соцсети</p>
+          <div  class="column-links">
+            <a href="#" class="links"><img class="social-icon" src="images/youtube-icon.svg" alt="иконка Youtube">Youtube</a>
+            <a href="#" class="links"><img class="social-icon" src="images/vk_color_white.svg" alt="иконка Вконтакте">Вконтакте</a>
+            <a href="#" class="links"><img class="social-icon" src="images/tiktok-icon.svg" alt="иконка TikTok">TikTok</a>
           </div>
         </div>
         
