--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
   <div class="page">
 
     <header class="header">
-      <div class="logo logo_place_header"></div>
+      <div class="logo logo__place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="links header__link">Узнать&#8594;</a>
+        <a href="#" class="links">Узнать &#8594;</a>
       </p>
       <img class="header__main-illustration" src="images/header-image.png" alt="изображение Опять двойка">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
 
-      <div class="description">
+      <section class="description" aria-label="Секция со статьей">
         <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не научат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренеруемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не научат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме</p>
           </div>
         </article>
-      </div>
+      </section>
 
       <section class="techniques">
-        <h3 class="title">Техники обучения</h3>
-        <p class="subtitle">Пять практик от Барбары Оакли</p>
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="изображение [Два вида внимания]">
@@ -68,15 +68,15 @@
       </section>
 
       <section class="video">
-        <h3 class="title">Видео нa TED</h3>
-        <p class="subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="iframes">
-          <iframe class="iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-          <iframe class="iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+        <h3 class="section-title">Видео нa TED</h3>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
 
-      <div class="oakley">
+      <div class="oakley" aria-label="Секция со статьей">
         <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
@@ -93,8 +93,8 @@
       </section>
 
       <section class="digits">
-        <h3 class="title">Цифры и факты</h3>
-        <p class="subtitle">Про учёбу и мозг</p>
+        <h3 class="section-title">Цифры и факты</h3>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
             <h4 class="table__heading">86 миллиардов</h4>
@@ -135,22 +135,22 @@
       </section>
 
       <section class="khan">
-        <div class="container">
-          <p class="author">Салман Хан</p>
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-          <p class="quote-author">Джордж Лукас</p>
-          <p class="quote-author-subline">Кинорежиссер, продюсер</p>
-          <div class="book-container">
-            <img class="book-pic" src="images/khan-book.jpg" alt="Книга Саламана Хана">
-            <a href="#" class="links buy-link">Купить книгу &#8594;</a>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Книга Саламана Хана">
+            <a href="#" class="links khan__buy-link">Купить книгу &#8594;</a>
           </div>
         </div>
       </section>
 
       <section class="kaufman">
-        <h3 class="title kaufman__title">Принципы обучения</h3>
-        <p class="subtitle kaufman__subtitle">от Джоша Кауфмана</p>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table">
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">1</h4>
@@ -158,7 +158,7 @@
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">2</h4>
-            <p class="table__text">Сосредоточтесь на каком-то одном навыке.</p>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">3</h4>
@@ -174,7 +174,7 @@
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">6</h4>
-            <p class="table__text">Устраните препядствия для занятий.</p>
+            <p class="table__text">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading">7</h4>
@@ -192,47 +192,47 @@
             <h4 class="table__heading">10</h4>
             <p class="table__text">Уделяйте внимание количеству и скорости</p>
           </li>
-          <li class="kaufman__triangle"></li>
         </ul>
+        <div class="kaufman__triangle rotation"></div>
       </section>
 
       <section class="resourses">
-        <h3 class="title">Полезные ресурсы</h3>
-        <p class="subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <nav class="logo-zone">
-          <a href="#" class="links"><img class="links__resourses" src="images/logo/resources-arzamas.svg" alt="логотип Арзамас"></a>
-          <a href="#" class="links"><img class="links__resourses" src="images/logo/resources-n1.svg" alt="логотип N+1"></a>
-          <a href="#" class="links"><img class="links__resourses" src="images/logo/resources-strelka.svg" alt="логотип Стрелка"></a>
-          <a href="#" class="links"><img class="links__resourses" src="images/logo/resources-polka.svg" alt="логотип Полка"></a>
-        </nav>
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resourses__logo-zone">
+          <li><a href="#" class="links"><img class="resourses__link" src="images/logo/resources-arzamas.svg" alt="логотип Арзамас"></a></li>
+          <li><a href="#" class="links"><img class="resourses__link" src="images/logo/resources-n1.svg" alt="логотип N+1"></a></li>
+          <li><a href="#" class="links"><img class="resourses__link" src="images/logo/resources-strelka.svg" alt="логотип Стрелка"></a></li>
+          <li><a href="#" class="links"><img class="resourses__link" src="images/logo/resources-polka.svg" alt="логотип Полка"></a></li>
+        </ul>
       </section>
 
     </main>
 
     <footer class="footer">
-      <div class="columns">
+      <div class="footer__columns">
 
         <div class="footer__column footer__column_content_copyright">
-          <div class="logo logo_place_footer"></div>
-          <p class="author">&#169; Satiukov Aleksei</p>
+          <div class="logo logo__place_footer"></div>
+          <p class="footer__author">&#169; eNR</p>
         </div>
 
-        <div class="footer__column">
-          <p class="column-heading">О Практикуме</p>
-          <nav class="column-links">
-            <a href="#" class="links">Главная</a>
-            <a href="#" class="links">Концепция</a>
-            <a href="#" class="links">Наставники</a>
-          </nav>
+        <div class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <ul class="footer__column-links">
+            <li><a href="#" class="links links_theme_dark">Главная</a></li>
+            <li><a href="#" class="links links_theme_dark">Концепция</a></li>
+            <li><a href="#" class="links links_theme_dark">Наставники</a></li>
+          </ul>
         </div>
 
-        <div class="footer__column">
-          <p class="column-heading">Соцсети</p>
-          <div  class="column-links">
-            <a href="#" class="links"><img class="social-icon" src="images/youtube-icon.svg" alt="иконка Youtube">Youtube</a>
-            <a href="#" class="links"><img class="social-icon" src="images/vk_color_white.svg" alt="иконка Вконтакте">Вконтакте</a>
-            <a href="#" class="links"><img class="social-icon" src="images/tiktok-icon.svg" alt="иконка TikTok">TikTok</a>
-          </div>
+        <div class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <ul  class="footer__column-links">
+            <li><a href="#" class="links links_theme_dark"><img class="footer__social-icon" src="images/youtube-icon.svg" alt="иконка Youtube">Youtube</a></li>
+            <li><a href="#" class="links links_theme_dark"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="иконка Вконтакте">Вконтакте</a></li>
+            <li><a href="#" class="links links_theme_dark"><img class="footer__social-icon" src="images/tiktok-icon.svg" alt="иконка TikTok">TikTok</a></li>
+          </ul>
         </div>
         
       </div>
