--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="page">
 
     <header class="header">
-      <div class="logo logo__place_header"></div>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
@@ -213,7 +213,7 @@
       <div class="footer__columns">
 
         <div class="footer__column footer__column_content_copyright">
-          <div class="logo logo__place_footer"></div>
+          <div class="logo logo_place_footer"></div>
           <p class="footer__author">&#169; eNR</p>
         </div>
 
