--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть</h3>
         <a href="#" class="links feynman__link">Подробнее &#8594;</a>
+        <div>
         <img class="feynman__image" src="images/feynman.png" alt="изображение Фейнмана">
+        </div>
       </section>
 
       <section class="digits">
